[package]
name = "xlog-rs"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A simple logger for Rust"
repository = "https://github.com/kumudiaorong/xlog-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xlog"

[dependencies]
